// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AHN Nomination Pools > nomination pool creation with insufficient funds > create nomination pool with insufficient funds events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 81,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 4500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`AHN Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 0,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": 0,
      "joined": true,
      "member": "5HGjWAeFDfFCWPsjFQdVV2Msvz2XtMktvgocEZcCj68kUMaw",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`AHN Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join second nomination pool events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 81,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 3600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`AHN Nomination Pools > nomination pool global config test > setting global nomination pool configs with signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1900000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`AHN Nomination Pools > nomination pool lifecycle test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 1000000000,
      "joined": true,
      "member": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`AHN Nomination Pools > nomination pool metadata test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 1000000000,
      "joined": true,
      "member": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`AHN Nomination Pools > nomination pool metadata test > set metadata events 1`] = `
[
  {
    "data": {
      "caller": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "poolId": 1,
    },
    "method": "MetadataUpdated",
    "section": "nominationPools",
  },
]
`;
